Add a few Python ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@
 .idea/
 .vscode/
 *.retry
+
+__pycache__/
+*.py[cod]
+*$py.class
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
