Run the role through yamllint

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -96,16 +96,16 @@
 
 - name: Manage login credentials for 1 or more Docker registries
   docker_login:
-    registry_url: "{{ item.registry_url | default(omit) }}"
-    state: "{{ item.state | default('present') }}"
+    registry_url: "{{ item.registry_url|default(omit) }}"
+    state: "{{ item.state|default('present') }}"
     username: "{{ item.username }}"
     password: "{{ item.password }}"
-    email: "{{ item.email | default(omit)}}"
-    reauthorize: "{{ item.reauthorize | default(omit) }}"
+    email: "{{ item.email|default(omit)}}"
+    reauthorize: "{{ item.reauthorize|default(omit) }}"
   loop: "{{ docker__registries }}"
-  when: item.username | default() and item.password | default()
-  become_user: "{{ item.system_user | default(omit) }}"
-  #become: true
+  when: item.username|default() and item.password|default()
+  become_user: "{{ item.system_user|default(omit) }}"
+  become: true
 
 - name: Remove Docker Compose
   file:
