--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,8 +40,8 @@ docker__package_dependencies:
   - "cron"
 
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
-docker__apt_key_server: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+docker__apt_key_server: "https://download.docker.com/linux/{{ ansible_distribution|lower }}/gpg"  # yamllint disable-line rule:line-length
 docker__apt_repository: >
   deb [arch=amd64]
-  https://download.docker.com/linux/{{ ansible_distribution | lower }}
+  https://download.docker.com/linux/{{ ansible_distribution|lower }}
   {{ ansible_distribution_release }} {{ docker__channel }}
