--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,19 +11,23 @@ docker__compose_download_url: "https://github.com/docker/compose/releases/downlo
 docker__users: []
 docker__registries: []
 
-docker__daemon_options_log_max_size: "1m"
-docker__daemon_options_log_max_file: 10000
+docker__default_daemon_json_log_max_size: "1m"
+docker__default_daemon_json_log_max_file: 10000
 
-docker__daemon_default_options: |
+docker__default_daemon_json: |
   "log-driver": "json-file",
   "log-opts": {
-    "max-size": "{{ docker__daemon_options_log_max_size }}",
-    "max-file": "{{ docker__daemon_options_log_max_file }}"
+    "max-size": "{{ docker__default_daemon_json_log_max_size }}",
+    "max-file": "{{ docker__default_daemon_json_log_max_file }}"
   }
+docker__daemon_json: ""
 
-docker__daemon_options: ""
+docker__daemon_flags:
+  - "-H fd://"
 
 docker__daemon_environment: []
+
+docker__systemd_override: ""
 
 docker__cron_jobs:
   - name: "Docker disk clean up"
