--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,26 +1,19 @@
 ---
 
 docker__edition: "ce"
-docker__channel: "stable"
+docker__channel: ["stable"]
 docker__version: "latest"
+docker__state: "present"
 
-docker__install_docker_compose: true
-docker__compose_version: "1.23.0"
-docker__compose_download_url: "https://github.com/docker/compose/releases/download/{{ docker__compose_version }}/docker-compose-Linux-x86_64"  # yamllint disable-line rule:line-length
+docker__compose_version: "latest"
 
 docker__users: []
 
 docker__registries: []
 
-docker__default_daemon_json_log_max_size: "1m"
-docker__default_daemon_json_log_max_file: 10000
-
 docker__default_daemon_json: |
-  "log-driver": "json-file",
-  "log-opts": {
-    "max-size": "{{ docker__default_daemon_json_log_max_size }}",
-    "max-file": "{{ docker__default_daemon_json_log_max_file }}"
-  }
+  "log-driver": "journald"
+
 docker__daemon_json: ""
 
 docker__daemon_flags:
@@ -30,24 +23,43 @@ docker__daemon_environment: []
 
 docker__systemd_override: ""
 
+docker__cron_jobs_prune_flags: "af"
 docker__cron_jobs:
   - name: "Docker disk clean up"
-    job: docker system prune -af &> /dev/null
+    job: "docker system prune -{{ docker__cron_jobs_prune_flags }} > /dev/null 2>&1"
     schedule: ["0", "0", "*", "*", "0"]
     cron_file: "docker-disk-clean-up"
-    user: "{{ (docker__users|first)|default('root') }}"
+    user: "{{ (docker__users | first) | d('root') }}"
 
 docker__package_dependencies:
   - "apt-transport-https"
   - "ca-certificates"
   - "cron"
   - "gnupg2"
-  - "python-pip"
   - "software-properties-common"
 
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
-docker__apt_key_server: "https://download.docker.com/linux/{{ ansible_distribution|lower }}/gpg"  # yamllint disable-line rule:line-length
+docker__apt_key_server: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
 docker__apt_repository: >
   deb [arch=amd64]
-  https://download.docker.com/linux/{{ ansible_distribution|lower }}
-  {{ ansible_distribution_release }} {{ docker__channel }}
+  https://download.docker.com/linux/{{ ansible_distribution | lower }}
+  {{ ansible_distribution_release }} {{ docker__channel | join (' ') }}
+
+docker__pip_dependencies:
+  - "python-setuptools"
+  - "python{{ '3' if ansible_python.executable[-1] == '3' else '' }}-pip"
+
+docker__pip_virtualenv: "/usr/local/lib/docker/virtualenv"
+
+docker__default_pip_packages:
+  - name: "docker"
+    state: "{{ docker__pip_docker_state }}"
+  - name: "docker-compose"
+    version: "{{ docker__compose_version }}"
+    path: "/usr/local/bin/docker-compose"
+    src: "{{ docker__pip_virtualenv + '/bin/docker-compose' }}"
+    state: "{{ docker__pip_docker_compose_state }}"
+docker__pip_packages: []
+
+docker__pip_docker_state: "present"
+docker__pip_docker_compose_state: "present"
