--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   role_name: "docker"
   author: "Nick Janetakis"
-  description: "Install Docker and optionally Docker Compose."
+  description: "Install and configure Docker / Docker Compose."
   license: "MIT"
   min_ansible_version: 2.5
 
