--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,7 +4,8 @@
   become: true
 
   vars:
-    docker__version: "18.03"
+    docker__version: "18.06"
+
     docker__users: ["test"]
 
     docker__daemon_json: |
@@ -26,7 +27,7 @@
       ThisIsJust=ATest
 
   roles:
-    - "role_under_test"
+    - role: "role_under_test"
 
   pre_tasks:
     - name: Add test user
@@ -38,63 +39,3 @@
       apt:
         update_cache: true
       changed_when: false
-
-  post_tasks:
-    - name: Ensure Docker gets installed
-      command: docker --version
-      register: result_pinned
-      changed_when: result_pinned.rc != 0
-
-    - name: Run the equivalent of "apt-get update"
-      apt:
-        update_cache: true
-      changed_when: false
-
-    - name: Ensure pinned Docker version wasn't updated
-      # This is valid because 18.06+ is currently out. If the pin failed then
-      # this docker --version would be different from the previous check.
-      command: docker --version
-      register: result
-      changed_when: result.stdout != result_pinned.stdout
-
-    - name: Ensure test user can access Docker without root access
-      command: groups test
-      register: result
-      changed_when: result.stdout.split(":")[1] | trim != "test docker"
-
-    - name: Ensure Docker Compose gets installed
-      command: docker-compose --version
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure /etc/docker/daemon.json contains defaults options
-      command: grep 1m /etc/docker/daemon.json
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure /etc/docker/daemon.json contains custom options
-      command: grep 8.8.8.8 /etc/docker/daemon.json
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure customized environment systemd unit file was created
-      command: >
-        grep -e '"HTTP_PROXY=.*" "HTTPS_PROXY=.*"'
-        /etc/systemd/system/docker.service.d/environment.conf
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure customized daemon flags systemd unit file was created
-      command: grep debug /etc/systemd/system/docker.service.d/options.conf
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure customized systemd overrides were created
-      command: grep ATest /etc/systemd/system/docker.service.d/custom.conf
-      register: result
-      changed_when: result.rc != 0
-
-    - name: Ensure Docker clean up cron job was added
-      command: grep "docker system prune -af" /etc/cron.d/docker-disk-clean-up
-      register: result
-      changed_when: result.rc != 0
