Check for an existing Docker Compose file before symlinking it

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,6 +34,19 @@
     name: "docker-{{ docker__edition }}"
     state: "{{ docker__state }}"
 
+- name: Check for existing Docker Compose file
+  stat:
+    path: "/usr/local/bin/docker-compose"
+  register: docker__register_docker_compose
+
+- name: Remove Docker Compose if it's been installed without PIP
+  file:
+    path: "/usr/local/bin/docker-compose"
+    state: "absent"
+  when:
+    - docker__register_docker_compose.stat.exists
+    - docker__register_docker_compose.stat.isreg | d(false)
+
 - name: Install Virtualenv
   pip:
     name: "virtualenv"
