Default to the Ansible SUDO_USER for docker__users

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ docker__state: "present"
 
 docker__compose_version: "latest"
 
-docker__users: []
+docker__users: ["{{ ansible_env.SUDO_USER | d('root') }}"]
 
 docker__registries: []
 
