--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   file:
     dest: "/etc/apt/preferences.d/docker-ce.pref"
     state: "absent"
-  when: docker__version == "latest"
+  when: not docker__version | d()
 
 - name: Enable pinned Docker version
   template:
@@ -13,7 +13,7 @@
     owner: "root"
     group: "root"
     mode: "0644"
-  when: docker__version != "latest"
+  when: docker__version | d()
 
 - name: Install Docker's dependencies
   apt:
