--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,7 +39,7 @@ docker__package_dependencies:
   - "software-properties-common"
 
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
-docker__apt_key_server: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+docker__apt_key_url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
 docker__apt_repository: >
   deb [arch=amd64]
   https://download.docker.com/linux/{{ ansible_distribution | lower }}
