--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -90,7 +90,7 @@
     owner: "root"
     group: "root"
     mode: "0644"
-  when: docker__default_daemon_json or docker__daemon_json
+  when: docker__default_daemon_json | d() or docker__daemon_json | d()
   notify: ["Restart Docker"]
 
 - name: Configure Docker daemon options (flags)
