--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,10 +24,11 @@ docker__daemon_environment: []
 docker__systemd_override: ""
 
 docker__cron_jobs_prune_flags: "af"
+docker__cron_jobs_prune_schedule: ["0", "0", "*", "*", "0"]
 docker__cron_jobs:
   - name: "Docker disk clean up"
     job: "docker system prune -{{ docker__cron_jobs_prune_flags }} > /dev/null 2>&1"
-    schedule: ["0", "0", "*", "*", "0"]
+    schedule: "{{ docker__cron_jobs_prune_schedule }}"
     cron_file: "docker-disk-clean-up"
     user: "{{ (docker__users | first) | d('root') }}"
 
