--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,7 @@ docker__dnf_package_dependencies:
   - "ca-certificates"
   - "cronie"
   - "gnupg2"
+  - "libselinux-python"
 
 docker__apt_key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
 docker__apt_key_url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
