--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,10 +18,11 @@
 - name: Install Docker's dependencies
   apt:
     name: "{{ docker__package_dependencies + docker__pip_dependencies }}"
+    force_apt_get: true
 
 - name: Add Docker's public PGP key to the APT keyring
   apt_key:
-    id: "{{ docker__apt_key_id }}"
+    #    id: "{{ docker__apt_key_id }}"
     url: "{{ docker__apt_key_url }}"
 
 - name: Configure Docker's upstream APT repository
@@ -33,6 +34,7 @@
   apt:
     name: "docker-{{ docker__edition }}"
     state: "{{ docker__state }}"
+    force_apt_get: true
 
 - name: Check for existing Docker Compose file
   stat:
@@ -81,6 +83,7 @@
     name: "{{ item }}"
     groups: "docker"
     append: true
+    shell: "/bin/bash"
   loop: "{{ docker__users }}"
 
 - name: Create Docker configuration directories
@@ -101,7 +104,7 @@
     owner: "root"
     group: "root"
     mode: "0644"
-  when: docker__default_daemon_json or docker__daemon_json
+  when: (docker__default_daemon_json | d()) or (docker__daemon_json | d())
   notify: ["Restart Docker"]
 
 - name: Configure Docker daemon options (flags)
@@ -112,7 +115,8 @@
     group: "root"
     mode: "0644"
   register: docker__register_daemon_flags
-  when: docker__daemon_flags
+  when: docker__daemon_flags | d()
+
   notify: ["Restart Docker"]
 
 - name: Configure Docker daemon environment variables
@@ -123,7 +127,7 @@
     group: "root"
     mode: "0644"
   register: docker__register_daemon_environment
-  when: docker__daemon_environment
+  when: docker__daemon_environment | d()
   notify: ["Restart Docker"]
 
 - name: Configure custom systemd unit file override
