add become for docker dependencies

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,7 @@
 - name: Install Docker's dependencies
   apt:
     name: "{{ docker__package_dependencies + docker__pip_dependencies }}"
+  become: true
 
 - name: Add Docker's public GPG key to the APT keyring
   apt_key:
