--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,7 @@
     state: "{{ item.state | d('present') }}"
   loop: "{{ docker__default_pip_packages + docker__pip_packages }}"
   when: item.name | d()
+  become: true
 
 - name: Symlink Python binary to /usr/local/bin/python-docker
   file:
