--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,6 +58,7 @@
     src: "{{ docker__pip_virtualenv }}/bin/python"
     force: true
     state: "link"
+  become: true
 
 - name: Symlink selected Python package binaries to /usr/local/bin
   file:
@@ -69,6 +70,7 @@
   when:
     - item.state | d("present") != "absent"
     - item.path | d() and item.src | d()
+  become: true
 
 - name: Add user(s) to "docker" group
   user:
@@ -76,6 +78,7 @@
     groups: "docker"
     append: true
   loop: "{{ docker__users }}"
+  become: true
 
 - name: Create Docker configuration directories
   file:
@@ -87,6 +90,7 @@
   loop:
     - "/etc/docker"
     - "/etc/systemd/system/docker.service.d"
+  become: true
 
 - name: Configure Docker daemon options (json)
   template:
@@ -96,6 +100,7 @@
     group: "root"
     mode: "0644"
   when: docker__default_daemon_json | d() or docker__daemon_json | d()
+  become: true
   notify: ["Restart Docker"]
 
 - name: Configure Docker daemon options (flags)
@@ -129,11 +134,13 @@
     mode: "0644"
   register: docker__register_custom_override
   when: docker__systemd_override | d()
+  become: true
   notify: ["Restart Docker"]
 
 - name: Reload systemd daemon
   systemd:
     daemon_reload: true
+  become: true
   when: docker__register_daemon_flags is changed
         or docker__register_daemon_environment is changed
         or docker__register_custom_override is changed
