--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -101,7 +101,7 @@
     group: "root"
     mode: "0644"
   register: docker__register_daemon_flags
-  when: docker__daemon_flags
+  when: docker__daemon_flags | d()
   notify: ["Restart Docker"]
 
 - name: Configure Docker daemon environment variables
@@ -112,7 +112,7 @@
     group: "root"
     mode: "0644"
   register: docker__register_daemon_environment
-  when: docker__daemon_environment
+  when: docker__daemon_environment | d()
   notify: ["Restart Docker"]
 
 - name: Configure custom systemd unit file override
